--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
-  postgres:
-    image: postgres
+  postgis:
+    image: postgis/postgis
     container_name: JobScope-Main-BD
     environment:
       POSTGRES_USER: postgres
